--- a/tosca-templates/galaxy-cluster.yaml
+++ b/tosca-templates/galaxy-cluster.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/v3.0.1/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/v3.0.1/custom_types.yaml
 
 description: >
   Deploy Galaxy from scratch with cluster support (SLOW).
@@ -204,9 +204,8 @@ topology_template:
             instance_type: { get_input: fe_instance_flavor }
         os:
           properties:
-            image: centos-7-galaxy-base
-            #image: centos-7_2nic
-            #image: ubuntu-16.04-vmi
+            image: galaxy-base
+            #image: centos-7-vmi
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
@@ -267,9 +266,8 @@ topology_template:
             instance_type: { get_input: wn_instance_flavor }
         os:
           properties:
-            image: centos-7-galaxy-base
-            #image: centos-7_2nic
-            #image: ubuntu-16.04-vmi
+            image: galaxy-base
+            #image: centos-7-vmi
 
   outputs:
     endpoint:
