--- a/tosca-metadata/galaxy-elastic-cluster.metadata.yaml
+++ b/tosca-metadata/galaxy-elastic-cluster.metadata.yaml
@@ -1,6 +1,6 @@
 metadata:
   icon: https://galaxyproject.org/images/galaxy-logos/galaxy_project_logo_square.png 
-  display_name: "Galaxy elastic cluster (BETA)"
+  display_name: "Galaxy elastic cluster"
   ribbon: true
   ribbon_tag: "Live build"
   ribbon_color: "green"
